Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20227

Program crash when assigning a value to transition property

XMLWordPrintable

    • 885ee642fb1342467d749f8a4bcafb8fbe6f0893, 3870e1478b64627f247fe1aa482d50a4367c0523

      When you try to assign a property value to the transition property of a QML element,
      the program crashes ("segmentation fault" on Linux).

      Here an example:

       
      import QtQuick 1.0
      
      Rectangle {
          id: canvas
          height: 500; width: 600
      
          Rectangle { id: rect; color: "blue"; height: 100; width: 100 }
      
          state: "A"
          states: [
              State { name: "A"; PropertyChanges { target: rect; x: 0; y: 100 } },
              State { name: "B"; PropertyChanges { target: rect; x: 500; y: 100 } }
          ]
      
          property list<Transition> trans1: [
              Transition {
                  NumberAnimation { target: rect; property: "x"; duration: 500 }
              }
          ]
          transitions: trans1
      
          Timer { interval: 1000; running: true; onTriggered: canvas.state = "B" }
          Timer { interval: 2000; running: true; onTriggered: canvas.state = "A" }
      } 
      

        For Gerrit Dashboard: QTBUG-20227
        # Subject Branch Project Status CR V

            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            hiddenbit Michael Scholtz
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes