Fix crash when assigning a list property to transitions.

This fixes the crash, but doesn't actually assign any
Transitions (the transitions list will now be empty, rather
than contain a null Transition object). Correct assignment
is a general language issue, and will be fixed separately.

Task-number: QTBUG-20227
Change-Id: Ie224d06b1d8bb82d03c5eba378affb7167f08724
Reviewed-by: Alan Alpert
Reviewed-on: http://codereview.qt.nokia.com/2152
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Alan Alpert <alan.alpert@nokia.com>